--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Control de versións VII (pull requests)</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, consectetur ullam animi aliquid cupiditate sunt tempora doloribus et numquam mollitia, ipsa, obcaecati quod ut ex saepe culpa voluptatibus libero nobis?</p>
 </body>
 </html>
