Engadiuse unha lista desordenada

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Control de versións VII (pull requests)</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, consectetur ullam animi aliquid cupiditate sunt tempora doloribus et numquam mollitia, ipsa, obcaecati quod ut ex saepe culpa voluptatibus libero nobis?</p>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, incidunt!</li>
+        <li>Illo aliquam veniam cumque. Sit, libero tempore? Beatae, magni nisi?</li>
+        <li>Expedita velit maiores explicabo qui itaque consectetur odit, eos fugiat.</li>
+    </ul>
 </body>
 </html>
